corpus/comment.txt
===============
Line
===============

% hello world
% foo

---

(program
  (comment)
  (comment)
)

===============
Junk
===============

hello world
this is all considered
junk (because no percent
sign to indicate comment)

---

(program (junk))

===============
Command
===============

@comment{this is a comment}
@comment(parentheses can be used)

---

(program
  (comment_command)
  (comment_command)
)

===============
Empty command
===============

@comment{}
@comment()

---

(program
  (comment_command)
  (comment_command)
)


===============
Command with nested braces
===============

@comment{ {this is a comment} }
@comment({parentheses can be used})
@comment{ { { { } } } { } ( ) {( )} }
@comment( { } { } ( ) {( )} )

---

(program
  (comment_command)
  (comment_command)
  (comment_command)
  (comment_command)
)
